--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="description" content="ベルフルール花屋">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belle Fleur Flora Shop</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
     </head>
